syntax = "proto3";

package kujira.intertx;

option go_package = "github.com/Team-Kujira/core/x/inter-tx/types";

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";

message CallbackData {
  string callback_key = 1;
  string port_id = 2;
  string channel_id = 3;
  uint64 sequence = 4;
  string contract = 5;
  string connection_id = 6;
  string account_id = 7;
  uint64 tx_id = 8;       
}
